# sophia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DESIGN.md  ISA.md  USER_GUIDE.md
src/sophia/: __init__.py  cli.py  compiler.py  learner.py  symbols.py
src/sophia/server/: __init__.py  mcp_server.py
src/sophia/tui/: __init__.py  app.py
tests/: test_compiler.py  test_learner.py  test_symbols.py
